force-app/main/default/objects/Exception_Log_Platform_Event__e/Exception_Log_Platform_Event__e.object-meta.xml
<CustomObject>
    <description>Exception Object for platform events</description>
    <label>Exception Log</label>
    <pluralLabel>Exception Logs</pluralLabel>
</CustomObject>