force-app/main/default/objects/Exception_Log_Platform_Event__e/fields/Exception_Stack__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack__c</fullName>
    <label>Exception Stack</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>