force-app/main/default/objects/Exception_Log_Platform_Event__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>