force-app/main/default/objects/Exception_Log_Platform_Event__e/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>